hw_3/deployment/deployment.yml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: my-app-deployment

spec:
  replicas: 2
  selector:
    matchLabels:
      app: my-app

  template:
    metadata:
      labels:
        app: my-app

    spec:
      containers:
        - name: my-app
          image: fanyshu/otus-arch-hw-3:v1
          ports:
            - name: web
              containerPort: 8000
          readinessProbe:
            httpGet:
              path: /health/check
              port: 8000
            initialDelaySeconds: 4
            periodSeconds: 3
